[tool.poetry]
name = "dictionary-learning"
version = "0.0.1"
description = "Algorithms to decompose signals as a sum of dictionary atoms. "
authors = ["Theo Jolivet"]
license = "Proprietary"
readme = "README.md"
repository = "https://github.com/TheooJ/dictionary-learning"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.20.3"
scikit-learn = "^1.0.0"
matplotlib = "~3.5"
tqdm = "~4.64"
tensorflow = "~2.9.1"
cvxpy = "1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"